# Marketing-Automation-MCP-Server

./: .env.example  CONTRIBUTING.md  DEMO_README.md  Dockerfile  Dockerfile.dashboard  PROJECT_SUMMARY.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  run_local.sh  run_server.py
.github/workflows/: ci.yml
dashboard/: app.py
docs/: README.md  operator-runbook.md  quickstart.md
docs/api/: README.md
docs/examples/: README.md
docs/guides/: roi-methodology.md
docs/reviews/: README.md  contract-drift.md  environment-matrix.md  findings.md  remediation-roadmap.md
src/: __init__.py  ai_engine.py  cli.py  config.py  database.py  database_utils.py  logger.py  models.py  performance.py  security.py  server.py
src/ai/: __init__.py
src/ai/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  registry.py
src/integrations/: google_ads.py  google_analytics.py  unified_client.py
src/tools/: marketing_tools.py
tests/: conftest.py
tests/integration/: test_marketing_workflows.py
tests/unit/: test_ai_engine.py  test_api_integrations.py  test_config_runtime.py  test_mcp_tools.py  test_server_runtime.py
